@@ -3,21 +3,21 @@
 # see the file kconfig-language.txt in the NuttX tools repository.
 #
 
-menuconfig SYSTEM_INIFILE
+menuconfig FSUTILS_INIFILE
 	bool "INI File Parser"
 	default n
 	---help---
 		Enable support for a simple INI file parser.
 
-if SYSTEM_INIFILE
+if FSUTILS_INIFILE
 
-config SYSTEM_INIFILE_MAXLINE
+config FSUTILS_INIFILE_MAXLINE
 	int "Max line length"
 	default 256
 	---help---
 		The largest line that the parser can expect to see in an INI file.
 
-config SYSTEM_INIFILE_DEBUGLEVEL
+config FSUTILS_INIFILE_DEBUGLEVEL
 	int "Debug level"
 	default 0
 	range 0 2
@@ -25,4 +25,4 @@ config SYSTEM_INIFILE_DEBUGLEVEL
 		0=Debug off; 1=Print errors on console; 2=Print debug information
 		on the console.
 
-endif # SYSTEM_INIFILE
+endif # FSUTILS_INIFILE
