@@ -1,7 +1,7 @@
 ############################################################################
-# apps/system/Makefile
+# apps/fsutils/inifile/Make.defs
 #
-#   Copyright (C) 2011-2014 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2016 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -33,48 +33,6 @@
 #
 ############################################################################
 
--include $(TOPDIR)/.config	# Current configuration
-
-# Sub-directories containing system tasks/libraries
-
-SUBDIRS  = cdcacm cle composite cu flash_eraseall free i2c hex2bin install
-SUBDIRS += hexed lm75 mdio netdb nxplayer ramtest ramtron readline sdcard
-SUBDIRS += stackmonitor sudoku symtab usbmonitor usbmsc vi zmodem zoneinfo
-
-# Create the list of installed runtime modules (INSTALLED_DIRS)
-
-ifeq ($(CONFIG_WINDOWS_NATIVE),y)
-define ADD_DIRECTORY
-  INSTALLED_DIRS  += $(if $(wildcard .\$1\Makefile),$1,)
-endef
-else
-define ADD_DIRECTORY
-  INSTALLED_DIRS  += $(if $(wildcard ./$1/Makefile),$1,)
-endef
+ifeq ($(CONFIG_FSUTILS_INIFILE),y)
+CONFIGURED_APPS += fsutils/inifile
 endif
-
-$(foreach DIR, $(SUBDIRS), $(eval $(call ADD_DIRECTORY,$(DIR))))
-
-all: nothing
-.PHONY: nothing context depend clean distclean
-
-define SDIR_template
-$(1)_$(2):
-	$(Q) $(MAKE) -C $(1) $(2) TOPDIR="$(TOPDIR)" APPDIR="$(APPDIR)"
-endef
-
-$(foreach SDIR, $(INSTALLED_DIRS), $(eval $(call SDIR_template,$(SDIR),depend)))
-$(foreach SDIR, $(INSTALLED_DIRS), $(eval $(call SDIR_template,$(SDIR),clean)))
-$(foreach SDIR, $(INSTALLED_DIRS), $(eval $(call SDIR_template,$(SDIR),distclean)))
-
-nothing:
-
-install:
-
-context:
-
-depend: $(foreach SDIR, $(INSTALLED_DIRS), $(SDIR)_depend)
-
-clean: $(foreach SDIR, $(INSTALLED_DIRS), $(SDIR)_clean)
-
-distclean: $(foreach SDIR, $(INSTALLED_DIRS), $(SDIR)_distclean)
