@@ -12,7 +12,6 @@ source "$APPSDIR/system/install/Kconfig"
 source "$APPSDIR/system/flash_eraseall/Kconfig"
 source "$APPSDIR/system/hex2bin/Kconfig"
 source "$APPSDIR/system/i2c/Kconfig"
-source "$APPSDIR/system/inifile/Kconfig"
 source "$APPSDIR/system/hexed/Kconfig"
 source "$APPSDIR/system/netdb/Kconfig"
 source "$APPSDIR/system/nxplayer/Kconfig"
